fix header links on mobile & update search dark theme (#71)
* fix header links on mobile & update search dark theme

* fix header links on mobile & update search dark theme

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -56,3 +56,14 @@
         min-width: 350px;
     }
 }
+
+html[data-theme=dark] .docsearch-modal-btn-icon,
+html[data-theme=dark] .docsearch-btn-placeholder {
+    color: #edeef3;
+}
+
+@media screen and (max-width: 767px) {
+    .social-icons {
+        flex-wrap: wrap;
+    }
+}
